<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.BrandFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/modelLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_le"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textSize="16sp"/>

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <Button
                android:id="@+id/buttonModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acura_mdx"
                android:drawableRight="@drawable/ic_chevron_right_black_48dp"
                android:drawableEnd="@drawable/ic_chevron_right_black_48dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ann_e"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:background="#E8E8E8">
                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kilom_trage"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editText"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="12345"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Type de transmission"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E8E8E8"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp">

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="320dp"
                    android:layout_height="25dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prix"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="16dp"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:inputType="number"
                android:text="12345"
                android:layout_marginStart="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vendu_par_le_propri_taire" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="256dp"
                    android:layout_height="46dp"
                    android:text="Soumettre"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/colorWhite"
                    android:background="#20639B"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>